Temporary setting JDK version, I don't think the one in jakarta-bom/pom.xml is necessary though
JBTM-3588 add-modules