@@ -29,6 +29,12 @@
     <!-- unfortunately we have mixed sources -->
     <transformer-input-dir>${project.basedir}/../../arjuna</transformer-input-dir>
     <orson.jar.location>${project.basedir}/../../../ext</orson.jar.location>
+    <jvm.args.modular>
+      --add-modules=java.sql
+      --add-modules=java.se
+      --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED
+      --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.sql=ALL-UNNAMED
+    </jvm.args.modular>
   </properties>
 
   <dependencies>
@@ -155,7 +161,13 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <useManifestOnlyJar>false</useManifestOnlyJar>
+	  <forkCount>3</forkCount>
+	  <reuseForks>true</reuseForks>
+          <argLine>${jvm.args.modular}</argLine>
+	  <systemPropertyVariables combine.children="append">
+	    <jvm.args.modular>${jvm.args.modular}</jvm.args.modular>
+	  </systemPropertyVariables>
+
           <excludes>
             <!-- bmunit cannot find byteman jar please set environment variable BYTEMAN_HOME -->
             <exclude>**/LogStoreRecoveryTest.java</exclude>
